2019-01-13  larissa9839  <larissa9839@gmail.com>

	* xpis/.gitignore:
	Make .gitignore file in the xpis directory to keep it.

	* makefile (firefox-unit-test):
	Remove firefox-unit-test target.

2018-08-02  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version. 1.3.3 -> 1.3.4

	* tryXpath/popup/popup.js: 
	Modify sendToSpecifiedFrame function to use detail.runAt.

2018-07-20  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify execContentScript function to use detail.runAt.
	Modify "get-all-frame-id" click listener to use detail.runAt.

2018-03-17  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change "strict_min_version". "52.0" -> "53.0"
	Change version. 1.3.1 -> 1.3.3

2018-01-25  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version. 1.3.1b1 -> 1.3.1

	* tryXpath/popup/popup.html (Main):
	Add none class to the frame-designation widget.

	* tryXpath/popup/popup.js:
	Remove codes sending initializeBlankWindows event in sendToSpecifiedFrame function.

	* tryXpath/scripts/try_xpath_content.js:
	Remove genericListener.listeners.initializeBlankWindows function.

2018-01-24  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Use detail.matchAboutBlank parameter when insertCSS is called.
	Use detail.matchAboutBlank parameter when removeCSS is called.

	* tryXpath/popup/popup.js:
	Use detail.matchAboutBlank parameter when executeScript is called.

	* tryXpath/manifest.json:
	Replace "activeTab" with "<all_urls>" in manifest.json.
	Change version. 1.3.0 -> 1.3.1b1

2018-01-10  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version. 1.3.0b2 -> 1.3.0

2018-01-09  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify genericListener.listeners.showResultsInPopup function to
	check message.context.itemDetail.

	* tryXpath/pages/show_all_results.css (th):
	Modify table stayles.
