@@ -4,6 +4,7 @@ body {
     margin-left: 8px;
     margin-right: 25px;
     font-size: 14px;
+    font-family: sans-serif;
 }
 
 h1 {
@@ -20,6 +21,7 @@ h2 {
 
 button {
     font-size: 100%;
+    font-family: inherit;
 }
 
 ol {
@@ -60,6 +62,7 @@ input[type="text"] {
     width: 100%;
     box-sizing: border-box;
     font-size: 100%;
+    font-family: Consolas, Monaco, "Ubuntu Mono", monospace;
 }
 
 textarea {
@@ -67,6 +70,7 @@ textarea {
     height: 1.5em;
     box-sizing: border-box;
     font-size: 100%;
+    font-family: Consolas, Monaco, "Ubuntu Mono", monospace;
 }
 
 table {
@@ -75,6 +79,7 @@ table {
     margin: 0px;
     border-collapse: collapse;
     word-break: break-all;
+    font-family: Consolas, Monaco, "Ubuntu Mono", monospace;
 }
 
 td,
