@@ -1,3 +1,8 @@
+2019-07-14  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/popup/popup.css :
+	Add font-family.
+
 2019-01-13  larissa9839  <larissa9839@gmail.com>
 
 	* xpis/.gitignore:
